ARGOCD/infrastructure/argocd-ingress/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/instance: cluster-infrastructure
  name: argocd-server-ingress
  namespace: argocd
spec:
  rules:
    - host: argo.middagsklubben.beer
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argo.middagsklubben.beer
      secretName: argocd-server-tls
